[package]
name = "learn_to_rust"
version = "0.1.0"
authors = ["Richard <zqdbyct@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
rust-crypto = "0.2.36"
block-modes = "0.8.1"
clap = "2.33.3"
[profile.release]
panic = 'abort'